[package]
name = "kondis"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "a simple library to communicate with exercise equipment"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
btleplug = { version = "0.11", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
uuid = "1.18.0"
