[package]
name = "kondis"
version = "0.3.2"
edition = "2024"
license-file = "LICENSE"
description = "a simple library to communicate with exercise equipment"
repository = "https://github.com/chinatsu/kondis"
documentation = "https://docs.rs/kondis"

[dependencies]
anyhow = "1"
async-trait = "0.1"
btleplug = { version = "0.11", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = "1"
